ejs grid set up

--- a/ejs/templates/index.ejs
+++ b/ejs/templates/index.ejs
@@ -26,10 +26,19 @@
 
 }) %>
 
-  <%- include('shared/homePage_icons-buttons.ejs') %>
+  <%- include('shared/homePage_icons-buttons') %>
 
   <%- include('shared/cards', { cards: 'card1' }) %>
   <%- include('shared/cards', { cards: 'card2' }) %>
+
+
+
+
+
+
+
+  <%- include('shared/grid', { numCols: 6, textCenter: true }) %>
+
 
 
 
