--- a/main.css
+++ b/main.css
@@ -2161,7 +2161,10 @@ input {
     align-items: center;
     justify-content: center;
     width: 1.8rem;
-    height: 118px;
+    height: 100%;
+
+
+    
     background: transparent;
     border: none;
     cursor: pointer;
@@ -2169,6 +2172,7 @@ input {
 }
 
 button.passwordArr {
+    margin-top: 34px;
     z-index: 98;
     padding: 0;
     color: var(--Grey900);
